--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Tic-Tac-Toe Game</title>
 </head>
 <body>
     
+    <div class="game-board">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+
+        <div id="results"></div>
+        <div id="score"></div>
+        <div id="winner"></div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
